# pyramidify

./: .gitignore  README.md  base_cam.py  base_cam_manual.py  base_cam_my.py  grid.py  pyproject.toml  pyramidify.py  pyramidify_my.py  raycast.py  raycast_volume.py  sample.py  sample1.py  sample2.py  sample3.py  sample4.py  setup_env.sh  volume.py  volume_density.py  volume_plot.py  volume_plot2.py
mydata/: transforms.json
mydata/w512h768/: transforms.json
