[tool.poetry]
name = "pyramidify"
version = "0.1.0"
description = ""
authors = ["Rintarooo <310rnomeado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
plotly = "^5.16.1"
scipy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
